pet fixed. entries and records added
